wordpress/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: "wordpress"
  labels:
    app: "wordpress"
spec:
  ports:
  - name: 8080-tcp
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: "wordpress"
    deploymentconfig: "wordpress"
