wordpress/route.yaml
kind: Route
apiVersion: v1
metadata:
  name: "wordpress"
  labels:
    app: "wordpress"
spec:
  host: 'wordpress.apps-crc.testing'
  to:
    kind: Service
    name: "wordpress"
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
